fix(EntityName): make popover button focus indicator visible
related to OPT-3879

--- a/client/src/modules/components/EntityName/EntityName.scss
+++ b/client/src/modules/components/EntityName/EntityName.scss
@@ -56,13 +56,6 @@
       width: 20px;
       height: 20px;
       margin-left: 3px;
-      background-color: transparent;
-      color: $grey-darken-23;
-      border: none;
-      border-radius: 50%;
-      padding: 0;
-      min-width: 0;
-      box-shadow: none;
 
       &:hover {
         background-color: $silver-darken-94;
